--- a/views/sokobang.haml
+++ b/views/sokobang.haml
@@ -15,12 +15,12 @@
   %body
     #images
     - # TODO {
-    \ - %w{ goo body }.each do |x|
-    \   %img{ id: "#{x}_img".upcase, src: "/img/#{x}.gif",
-    \         alt: 'IMG' }
-    \ - %w{ left up right down }.each do |x|
-    \   %img{ id: "head_#{x}_img".upcase, src: "/img/head_#{x}.gif",
-    \         alt: 'IMG' }
+    / - %w{ goo body }.each do |x|
+    /   %img{ id: "#{x}_img".upcase, src: "/img/#{x}.gif",
+    /         alt: 'IMG' }
+    / - %w{ left up right down }.each do |x|
+    /   %img{ id: "head_#{x}_img".upcase, src: "/img/head_#{x}.gif",
+    /         alt: 'IMG' }
     - # } TODO
     #link
       - url = 'https://github.com/obfusk/sokobang'
