--- a/views/sokobang.haml
+++ b/views/sokobang.haml
@@ -7,25 +7,44 @@
     - SCRIPTS.each do |src|
       %script{ type: 'text/javascript', src: src }
     :css
-      body, html  { width: 100%; height: 100%; margin: 0px; }
-      #images     { display: none; }
-      #link       { text-align: center; padding: 10px; }
-      #controls   { text-align: center; padding: 10px; }
-      #CANVAS     { display: block; margin: 0px auto;
-                    border: 1px solid black; }
+      body, html    { width: 100%; height: 100%; margin: 0px; }
+      #CANVAS       { display: block; border: 1px solid black;
+                      background-color: #666; }
+      .center       { text-align: center; padding: 10px; }
+      .hidden       { display: none; }
+      .middle       { margin: 0px auto; }
+      .w700         { max-width: 700px; }
   %body
-    #images
+    #images.hidden
       - %w{ goal man man_goal object object_goal wall }.each do |x|
         %img{ id: "#{x}_img", src: "/img/#{x}.png", alt: 'IMG' }
-    #link
+    #link.center
       - url = 'https://github.com/obfusk/sokobang'
-      &= '-->'
+      &rarr;
       %a{ href: url }&= url
-    #container
-      #controls
-        %label Set:
-        %select#sets
-        %label Level:
-        %select#levels
-        %button#play Play
-      %canvas#CANVAS
+    #controls.center
+      %label Set:
+      %select#sets
+      %label Level:
+      %select#levels
+      %button#play Play
+      %button#next Next
+    %canvas#CANVAS.middle
+    #data.center
+      %label Set:
+      %span#set ?
+      &mdash;
+      %label Level:
+      %span#level ?
+      &mdash;
+      %label Moves:
+      %span#moves ?
+      &mdash;
+      %label Pushes:
+      %span#pushes ?
+    %hr.w700
+    #instructions.center.middle.w700
+      Move the objects to the goals by pushing them (using as few
+      moves and pushes as possible).  Use the <strong>arrow
+      keys</strong> to move; press <strong>u</strong> to undo the last
+      move.
