make click to move relative to man again

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
   File        : templates/index.html
   Maintainer  : Felix C. Stegerman <flx@obfusk.net>
-  Date        : 2020-09-02
+  Date        : 2020-09-08
 
   Copyright   : Copyright (C) 2020  Felix C. Stegerman
   Version     : v0.2.1
@@ -107,9 +107,9 @@
           Push all the red gems to the green goal squares (using as
           few moves and pushes as possible).  Use your keyboard's
           <strong>arrow keys</strong> or the <strong>arrow
-          buttons</strong> or <strong>click/tap</strong> on the
-          left/right/top/bottom of the board to move; press
-          <strong>u</strong> to undo the last move.
+          buttons</strong> or <strong>click/tap</strong> to the
+          left/right of or above/below the "warehouse keeper" to move;
+          press <strong>u</strong> to undo the last move.
         </div>
       </div>
       <hr/>
