replace "man" w/ "person"

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,10 @@
   <body class="text-center">
     <div id="images" class="d-none">
       <img id="goal_img"        src="img/goal.png"        alt="IMG" />
-      <img id="man_img"         src="img/man.png"         alt="IMG" />
-      <img id="man_goal_img"    src="img/man_goal.png"    alt="IMG" />
-      <img id="object_img"      src="img/object.png"      alt="IMG" />
       <img id="object_goal_img" src="img/object_goal.png" alt="IMG" />
+      <img id="object_img"      src="img/object.png"      alt="IMG" />
+      <img id="person_goal_img" src="img/person_goal.png" alt="IMG" />
+      <img id="person_img"      src="img/person.png"      alt="IMG" />
       <img id="wall_img"        src="img/wall.png"        alt="IMG" />
     </div>
     <div class="container">
